--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.yanglifan</groupId>
-    <artifactId>keep-alive</artifactId>
+    <artifactId>http-keep-alive</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>KeepAlive</name>
+    <name>HttpKeepAlive</name>
     <description>Demo project for Spring Boot</description>
 
     <parent>
@@ -52,6 +52,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
